# llms-txts

./: .gitignore  README.md  checks.sh  code2prompt-minimal.hbs  doall.sh  pyproject.toml
src/llm_txts/: __init__.py  astral_sh.py  beautifulsoup.py  boto3.py  cli.py  commanderjs.py  devdocs.py  hy.py  icechunk.py  license_info.py  mlx.py  networkx.py  nodejs.py  p5js.py  progit.py  puppeteer.py  python.py  ruff.py  ty.py  typst.py  uv.py  whenever.py  xarray.py  zarr.py  zed.py  zig.py
