[project]
name = "llm-txts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "lxml>=6.0.0",
]

[project.scripts]
lt = "llm_txts:cli"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.7",
    "ty>=0.0.1a17",
]

[tool.ruff.lint]
select = ["I", "F401"]
# I enables import sorting
# F401 detects unused variables
