[project]
name = "llm-txts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "lxml>=6.0.0",
]

[project.scripts]
lt = "llm_txts:cli"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.7",
    "ty>=0.0.1a19",
]

[tool.ruff.lint]
select = [
    # pycodestyle (E) and Pyflakes (F) wide variety of common issues like syntax errors and undefined names
    "E",
    "F",
    "UP", # pyupgrade modernize by suggesting updates to newer syntax and features
    "B",  # flake8-bugbear checks for likely bugs and design problems
    "SIM",# flake8-simplify simplify complex code structures
    "I",  # isort import sorting
]
